--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 }
 
 .img-box:nth-child(3) {
-    background: url(http://www.haoling.cc/uploadfile/2023/1102/169889740394750.jpg);
+    background: url(https://i.imgur.com/9HNGz7X.jpeg);
     background-size: cover;
     background-position: center;
 }
